kind/05-kind/deploy/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 7070
      targetPort: web
